--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ pdfplumber
 nltk
 rank_bm25
 numpy
+langchain
+transformers
+pypdf
+langchain-community
+langchain-text-splitters
+langchain-huggingface
