--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ pdfplumber
 nltk
 rank_bm25
 numpy
+torch
 langchain
 transformers
 pypdf
 langchain-community
 langchain-text-splitters
 langchain-huggingface
+
