--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,36 @@
-# Core App Dependencies
-streamlit
-numpy
-torch
+# ---------------------------------------
+# 📦 Core Dependencies
+# ---------------------------------------
+streamlit>=1.37.0
+numpy>=1.26.0
+torch>=2.2.0
+tqdm>=4.66.0
 
-# NLP & Embeddings
-transformers
-sentence-transformers
-nltk
+# ---------------------------------------
+# 🧠 NLP & Embeddings
+# ---------------------------------------
+transformers>=4.40.0
+sentence-transformers>=2.5.1
+nltk>=3.8.1
 
-# PDF Processing
-pdfplumber
-pypdf
+# ---------------------------------------
+# 📄 PDF Processing
+# ---------------------------------------
+pdfplumber>=0.10.3
+pypdf>=4.2.0
 
-# Vector Databases and Retrieval
-faiss-cpu
-rank_bm25
+# ---------------------------------------
+# 🔍 Vector Databases and Retrieval
+# ---------------------------------------
+faiss-cpu>=1.8.0
+rank_bm25>=0.2.2
 
-# LangChain Ecosystem (latest modular setup)
-langchain
-langchain-core
-langchain-community
-langchain-text-splitters
-langchain-huggingface
-langchain-groq
-
-# Optional but Recommended (for safety in Streamlit deployments)
-tqdm
-
-
-
-
+# ---------------------------------------
+# 🔗 LangChain Ecosystem (modularized)
+# ---------------------------------------
+langchain>=0.3.0
+langchain-core>=0.3.0
+langchain-community>=0.3.0
+langchain-text-splitters>=0.3.0
+langchain-huggingface>=0.3.0
+langchain-groq>=0.3.0
