--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,29 @@
-# ---------------------------------------
-# 📦 Core Dependencies
-# ---------------------------------------
-streamlit>=1.37.0
-numpy>=1.26.0
-torch>=2.2.0
-tqdm>=4.66.0
+# Core App Dependencies
+streamlit==1.50.0
+numpy==2.3.4
+torch==2.9.0
 
-# ---------------------------------------
-# 🧠 NLP & Embeddings
-# ---------------------------------------
-transformers>=4.40.0
-sentence-transformers>=2.5.1
-nltk>=3.8.1
+# NLP & Embeddings
+transformers==4.57.1
+sentence-transformers==5.1.2
+nltk==3.9.2
 
-# ---------------------------------------
-# 📄 PDF Processing
-# ---------------------------------------
-pdfplumber>=0.10.3
-pypdf>=4.2.0
+# PDF Processing
+pdfplumber==0.11.7
+pypdf==6.1.3
 
-# ---------------------------------------
-# 🔍 Vector Databases and Retrieval
-# ---------------------------------------
-faiss-cpu>=1.8.0
-rank_bm25>=0.2.2
+# Vector Databases and Retrieval
+faiss-cpu==1.12.0
+rank-bm25==0.2.2
 
-# ---------------------------------------
-# 🔗 LangChain Ecosystem (modularized)
-# ---------------------------------------
-langchain>=0.3.0
-langchain-core>=0.3.0
-langchain-community>=0.3.0
-langchain-text-splitters>=0.3.0
-langchain-huggingface>=0.3.0
-langchain-groq>=0.3.0
+# LangChain Ecosystem (latest modular setup - compatible with v1.0+)
+langchain==1.0.2
+langchain-core==1.0.1
+langchain-community==0.4.1
+langchain-text-splitters==1.0.0
+langchain-huggingface==1.0.0
+langchain-groq==1.0.0
+
+# Optional but Recommended (for safety in Streamlit deployments)
+tqdm==4.67.1
+accelerate  # Soft dep for faster embeddings; no version pin needed
