Update requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,10 @@ faiss-cpu>=1.8.0
 rank_bm25>=0.2.2
 
 # LangChain Ecosystem (latest modular setup)
-langchain>=0.3.0
+langchain==1.0.2
+langchain-community==0.4.1
 langchain-core>=0.3.0
-langchain-community>=0.3.0
 langchain-text-splitters>=0.3.0
 langchain-huggingface>=0.3.0
 langchain-groq>=0.3.0
+
