--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # Core
-streamlit>=1.37.0
+streamlit>=1.38.0
 numpy>=1.26.0
 torch>=2.2.0
 tqdm>=4.66.0
@@ -17,11 +17,16 @@ pypdf>=4.2.0
 faiss-cpu>=1.8.0
 rank_bm25>=0.2.2
 
-# LangChain (old, stable versions for ConversationalRetrievalChain)
-langchain==0.1.17
-langchain-core==0.1.52
-langchain-community==0.0.37
-langchain-huggingface==0.0.5
-langchain-groq==0.0.2
+# LangChain Ecosystem (compatible with Python 3.13)
+langchain>=1.0.0
+langchain-core>=0.2.0
+langchain-community>=0.2.0
+langchain-text-splitters>=0.3.0
+langchain-huggingface>=0.3.0
+langchain-groq>=0.3.0
 
-
+# Utility
+PyYAML>=6.0
+aiohttp>=3.9.0
+dataclasses-json>=0.6.6
+SQLAlchemy>=2.0
