--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ torch>=2.2.0
 tqdm>=4.66.0
 
 # NLP & Embeddings
-transformers>=4.40.0
+transformers>=4.41.0
 sentence-transformers>=2.5.1
 nltk>=3.8.1
 
@@ -13,21 +13,14 @@ nltk>=3.8.1
 pdfplumber>=0.10.3
 pypdf>=4.2.0
 
-# Vector Databases and Retrieval
+# Vector Stores
 faiss-cpu>=1.8.0
 rank_bm25>=0.2.2
 
-# LangChain Ecosystem (compatible with Python 3.13)
-langchain>=1.0.0
+# LangChain ecosystem (stable versions)
+langchain>=1.1.0
 langchain-core>=0.3.0
 langchain-community>=0.3.0
 langchain-text-splitters>=0.3.0
 langchain-huggingface>=0.3.0
 langchain-groq>=0.3.0
-
-# Utility
-PyYAML>=6.0
-aiohttp>=3.9.0
-dataclasses-json>=0.6.6
-SQLAlchemy>=2.0
-
