--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,22 @@
-# Core
 streamlit>=1.38.0
 numpy>=1.26.0
 torch>=2.2.0
 tqdm>=4.66.0
 
-# NLP & Embeddings
-transformers>=4.41.0
+transformers>=4.40.0
 sentence-transformers>=2.5.1
 nltk>=3.8.1
 
-# PDF Processing
 pdfplumber>=0.10.3
 pypdf>=4.2.0
 
-# Vector Stores
 faiss-cpu>=1.8.0
 rank_bm25>=0.2.2
 
-# LangChain ecosystem (stable versions)
-langchain>=1.1.0
-langchain-core>=0.3.0
-langchain-community>=0.3.0
+# Hybrid LangChain setup
+langchain>=0.1.17
+langchain-core>=0.1.52
+langchain-community>=0.0.37
 langchain-text-splitters>=0.3.0
 langchain-huggingface>=0.3.0
 langchain-groq>=0.3.0
