--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,28 @@
-streamlit==1.37.1
-numpy==1.26.4
-torch==2.2.2
-tqdm==4.66.4
+# Core
+streamlit==1.38.0
+numpy>=2.0.0
+torch==2.9.0
+tqdm>=4.66.0
 
-transformers==4.40.1
-sentence-transformers==2.5.1
-nltk==3.8.1
+# NLP & Embeddings
+transformers==4.46.2
+sentence-transformers==2.7.0
+nltk==3.9.1
 
-pdfplumber==0.10.3
-pypdf==4.2.0
+# PDF Processing
+pdfplumber==0.11.0
+pypdf==6.1.0
 
-faiss-cpu==1.8.0
+# Vector DB & Retrieval
+faiss-cpu==1.12.0
 rank_bm25==0.2.2
 
-# LangChain ecosystem – compatible unified versions
+# LangChain (classic structure with ConversationalRetrievalChain)
 langchain==0.1.17
 langchain-core==0.1.52
 langchain-community==0.0.37
 langchain-huggingface==0.0.5
 langchain-groq==0.0.2
+
+# Safety/utility
+pandas>=2.2.2
