--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,27 @@
-# Core
+# Core dependencies
 streamlit==1.38.0
-numpy>=2.0.0
+numpy==1.26.4
 torch==2.9.0
-tqdm>=4.66.0
-
-# NLP & Embeddings
+tqdm==4.67.1
 transformers==4.46.2
 sentence-transformers==2.7.0
 nltk==3.9.1
-
-# PDF Processing
 pdfplumber==0.11.0
 pypdf==6.1.0
-
-# Vector DB & Retrieval
 faiss-cpu==1.12.0
 rank_bm25==0.2.2
 
-# LangChain (classic structure with ConversationalRetrievalChain)
+# LangChain ecosystem (pinned for compatibility)
 langchain==0.1.17
 langchain-core==0.1.52
 langchain-community==0.0.37
-langchain-huggingface==0.0.5
-langchain-groq==0.0.2
+langchain-huggingface==0.3.0
+langchain-groq==0.3.0
+langchain-text-splitters==0.0.1
 
-# Safety/utility
-pandas>=2.2.2
+# Utilities
+PyYAML==6.0.2
+SQLAlchemy==2.0.44
+aiohttp==3.9.5
+dataclasses-json==0.6.7
+jsonpatch==1.33
