--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 streamlit>=1.38.0
 numpy>=1.26.0
 tqdm>=4.66.0
-
+torch==2.9.0
 # ML & Embeddings
 sentence-transformers>=2.2.2
 transformers>=4.40.0
@@ -21,3 +21,4 @@ langchain-groq>=0.3.0
 
 # Utilities
 PyYAML>=6.0
+
